feat: 파일 확장자 확인 기능 구현 (#54)