@@ -4,6 +4,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.BDDMockito.given;
 
+import com.woowacourse.s3proxy.common.FileFactory;
 import com.woowacourse.s3proxy.web.application.dto.FilesDto.Request;
 import com.woowacourse.s3proxy.web.application.dto.FilesDto.Response;
 import com.woowacourse.s3proxy.web.domain.PickGitStorage;
@@ -11,6 +12,7 @@ import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
 import org.apache.http.entity.ContentType;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -28,31 +30,29 @@ class PickGitStorageServiceTest {
     private PickGitStorageService pickGitStorageService;
 
 
+    @DisplayName("파일들을 저장한다. - 성공")
     @Test
-    void store() {
+    void store_storeFiles_True() {
         //given
-        final String testFileName = "testFileName";
+        MockMultipartFile testRightImage1 = FileFactory.getTestRightImage1();
+        MockMultipartFile testRightImage2 = FileFactory.getTestRightImage2();
         final String testUrl = "testUrl";
+
         given(pickGitStorage.store(anyList()))
-            .willReturn(Collections.singletonList(
-                new PickGitStorage.StoreResult(testFileName, testUrl)
+            .willReturn(List.of(
+                new PickGitStorage.StoreResult(testRightImage1.getOriginalFilename(), testUrl),
+                new PickGitStorage.StoreResult(testRightImage2.getOriginalFilename(), testUrl)
             ));
 
         //when
-        Response store = pickGitStorageService.store(new Request("neozal", List.of(
-            createTestFile("testFileName")
-        )));
+        Response store = pickGitStorageService.store(
+            new Request("neozal", List.of(
+                FileFactory.getTestRightImage1(),
+                FileFactory.getTestRightImage2()
+            ))
+        );
 
         //then
-        assertThat(store.getUrls()).contains(testUrl);
-    }
-
-    private MockMultipartFile createTestFile(String fileName) {
-        return new MockMultipartFile(
-            "files",
-            fileName,
-            ContentType.IMAGE_JPEG.toString(),
-            "TEST".getBytes(StandardCharsets.UTF_8)
-        );
+        assertThat(store.getUrls()).containsExactly(testUrl, testUrl);
     }
 }
